<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_grey"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginBottom="16dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_sa_diagram_detailUI"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="180dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/diagram_software_architecture" />



        <ImageView
            android:id="@+id/iv_sa_icon_detailUI"
            tools:src="@tools:sample/avatars"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_sa_diagram_detailUI"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_sa" />

        <TextView
            android:id="@+id/tv_sa_name_detailUI"
            app:layout_constraintStart_toEndOf="@id/iv_sa_icon_detailUI"
            app:layout_constraintTop_toTopOf="@id/iv_sa_icon_detailUI"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            tools:text="Name SA"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/iv_sa_icon_detailUI"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



        <ImageView
            android:id="@+id/iv_icon_desc_detailUI"
            android:src="@drawable/ic_baseline_description_24"
            app:layout_constraintStart_toStartOf="@id/iv_sa_icon_detailUI"
            app:layout_constraintTop_toBottomOf="@id/iv_sa_icon_detailUI"
            app:layout_constraintEnd_toEndOf="@id/iv_sa_icon_detailUI"
            android:layout_marginTop="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon_description" />

        <TextView
            app:layout_constraintTop_toTopOf="@id/iv_icon_desc_detailUI"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_desc_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_sa_desc_data_detailUI"
            tools:text="@string/all_chars"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_desc_detailUI"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



        <ImageView
            android:id="@+id/iv_icon_usage_detailUI"
            app:layout_constraintTop_toBottomOf="@id/tv_sa_desc_data_detailUI"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_thumb_up_24"
            app:layout_constraintStart_toStartOf="@id/iv_sa_icon_detailUI"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon_usage" />

        <TextView
            android:id="@+id/tv_sa_usage_detailUI"
            app:layout_constraintTop_toTopOf="@id/iv_icon_usage_detailUI"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_usage_detailUI"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            android:text="@string/usage"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_sa_usage_data_detailUI"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintTop_toBottomOf="@id/tv_sa_usage_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            tools:text="@string/all_chars"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



        <ImageView
            android:id="@+id/iv_icon_shortcoming_detailUI"
            android:src="@drawable/ic_baseline_do_not_touch_24"
            app:layout_constraintTop_toBottomOf="@id/tv_sa_usage_data_detailUI"
            app:layout_constraintStart_toStartOf="@id/iv_sa_icon_detailUI"
            android:layout_marginTop="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon_shortcoming" />

        <TextView
            android:id="@+id/tv_sa_shortcoming_detailUI"
            android:text="@string/shortcoming"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_shortcoming_detailUI"
            app:layout_constraintTop_toTopOf="@id/iv_icon_shortcoming_detailUI"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_sa_shortcoming_data_detailUI"
            tools:text="@string/all_chars"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_shortcoming_detailUI"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_icon_moreexp_detailUI"
            app:layout_constraintTop_toBottomOf="@id/tv_sa_shortcoming_data_detailUI"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/iv_sa_icon_detailUI"
            android:src="@drawable/ic_baseline_textsms_24"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon_more_explanation" />

        <TextView
            android:id="@+id/tv_sa_moreexp_detailUI"
            android:text="@string/more_explanation"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon_moreexp_detailUI"
            app:layout_constraintTop_toTopOf="@id/iv_icon_moreexp_detailUI"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_sa_moreexp_data_detailUI"
            tools:text="@string/all_chars"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_sa_name_detailUI"
            app:layout_constraintEnd_toEndOf="@id/tv_sa_name_detailUI"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_moreexp_detailUI"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>




    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>