<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_UI"
    card_view:cardBackgroundColor="@color/darker_grey"
    android:layout_gravity="center"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    card_view:cardCornerRadius="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_icon_sa_UI"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/icon_sa" />

        <TextView
            android:id="@+id/tv_sa_title_UI"
            card_view:layout_constraintTop_toTopOf="@id/iv_icon_sa_UI"
            card_view:layout_constraintStart_toEndOf="@id/iv_icon_sa_UI"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            tools:text="@string/sa_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_sa_desc_UI"
            card_view:layout_constraintStart_toStartOf="@id/tv_sa_title_UI"
            card_view:layout_constraintEnd_toEndOf="@id/tv_sa_title_UI"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_icon_sa_UI"
            card_view:layout_constraintTop_toBottomOf="@id/tv_sa_title_UI"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="@string/all_chars"
            android:layout_width="0dp"
            android:layout_height="0dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>