<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_grey"
    tools:context=".AboutActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/tv_cat_kiss_UI"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cat"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>


    <TextView
        android:id="@+id/tv_thank_UI"
        android:text="@string/thanks"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cat_kiss_UI"
        android:textSize="10sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/gl_vert_about_UI"
        app:layout_constraintGuide_percent="0.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_cahya_UI"
        android:src="@drawable/sbl"
        app:layout_constraintTop_toBottomOf="@id/tv_thank_UI"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@id/gl_vert_about_UI"
        android:layout_width="64dp"
        android:layout_height="64dp"/>

    <TextView
        android:id="@+id/tv_nama_cahya_UI"
        android:text="@string/nama_cahya"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tv_email_cahya_UI"
        app:layout_constraintBottom_toTopOf="@id/tv_email_cahya_UI"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_email_cahya_UI"
        app:layout_constraintBottom_toBottomOf="@id/iv_cahya_UI"
        app:layout_constraintStart_toEndOf="@id/iv_cahya_UI"
        android:layout_marginStart="12dp"
        android:text="@string/email_cahya"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>